# drill-design-web-services

./: FEATURES.md  README_TESTING.md  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  playwright.config.ts
app/: globals.css  layout.tsx  page.tsx
app/constants/: parts.ts
app/drill/: page.tsx
app/drills/: page.tsx
app/grid-editor/: page.tsx
app/help/: page.tsx
app/members/: page.tsx
components/: BackToDrillButton.tsx  ContextHelp.tsx  EditorHelpDialog.tsx  ErrorNotification.tsx  HeaderControls.tsx  LanguageToggle.tsx  MenuBar.tsx  OnboardingTutorial.tsx  ProgressBar.tsx  ShortcutHelpDialog.tsx  Tooltip.tsx  UserMenu.tsx
context/: ClipboardContext.tsx  I18nContext.tsx  MembersContext.tsx  MenuContext.tsx  SettingsContext.tsx  ShortcutContext.tsx
docs/: BETA_FEATURES.md  LEARNING_SYSTEM_DESIGN.md  PYTHON_BACKEND_PROPOSAL.md
e2e/: drill-editor.spec.ts  performance.spec.ts
hooks/: useCanvasZoom.ts  useConflictResolution.ts  useCursorTracking.ts  useDrillDatabase.ts  useDrillExport.ts  useDrillPageHandlers.ts  useDrillPageState.ts  useDrillPlayback.ts  useDrillRecording.ts  useDrillSets.ts  useDrillUndoRedo.ts  useEditLock.ts  useIndividualPlacement.ts  useKeyboardShortcuts.ts  useMusicSync.ts  useProgress.ts  useRealtimeSync.ts  useSnapMode.ts  useUndoRedo.ts
lib/: auth.ts  drillTypes.ts  prisma.ts
prisma/: schema.prisma
python-service/: README.md  pyproject.toml
python-service/app/: learning.py  main.py
python-service/drill_python_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
types/: drillEditor.ts
(+116 files in other folders)
